style.css
@media (prefers-color-scheme: light) {
	body {
		background: SeaShell;
		color: black;
		overflow: hidden
	}
}

@media (prefers-color-scheme: dark) {
	body {
		background: #000;
		color: white;
		overflow: hidden
	}
	a:link {
		color: #00ff00;
		background-color: transparent;
	}
	a:visited {
		color: #00DD00;
		background-color: transparent;
	}
	a:hover {
		color: red;
		background-color: transparent;
		text-decoration: underline;
	}
	a:active {
		color: yellow;
		background-color: transparent;
		text-decoration: underline;
	}
}

